[package]
name = "rremix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.1.6", features=["derive"]}
codespan-reporting = "0.11.1"
derivative = "2.2.0"
once_cell = "1.10.0"
pest = "2.1.3"
pest_derive = "2.1.0"
xshell = "0.2.1"

[dev-dependencies]
insta = "1.13.0"
test-case = "2.0.0"
